# clean-repo

./: .gitignore  CNAME  Cargo.toml  README.md  install.sh  key.asc
.github/actions/setup-apt-repo/: action.yml
.github/workflows/: build.yml  release.yml
clean-repo/: Packages  Release  install.sh
clean-repo/dists/stable/: InRelease  Release  Release.gpg
clean-repo/dists/stable/main/binary-all/: Packages
clean-repo/dists/stable/main/binary-amd64/: Packages
clean-repo/pool/main/: clean-repo_1.2.1_all.deb  clean-repo_1.2.2_all.deb  clean-repo_1.3.0-pre-1_amd64.deb
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-all/: Packages
dists/stable/main/binary-amd64/: clean-repo.deb
man/: clean-repo.1
package/DEBIAN/: control
package/usr/local/share/man/man1/: clean-repo.1
pool/main/: clean-repo_1.0.0_all.deb  clean-repo_1.0.1_all.deb  clean-repo_1.0.2_all.deb  clean-repo_1.2.0_all.deb
src/: cleaner.rs  cli.rs  git.rs  main.rs  patterns.rs
