[package]
name = "clean-repo"
version = "1.3.0"
edition = "2021"
authors = ["Mohammad Saeed <imsaeedsaeedi@gmail.com>"]
description = "A command-line tool that deletes files and directories ignored by your project's .gitignore"
license = "MIT"
repository = "https://github.com/msaeedsaeedi/clean-repo"
homepage = "https://github.com/msaeedsaeedi/clean-repo"
readme = "README.md"
keywords = ["git", "cli", "cleanup", "gitignore", "clean"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
git2 = "0.19"
glob = "0.3"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[package.metadata.deb]
maintainer = "Mohammad Saeed <imsaeedsaeedi@gmail.com>"
section = "utils"
priority = "optional"
depends = "libc6, libgcc-s1, libssl3"
conflicts = []
replaces = []
extended-description = """\
clean-repo is a command-line tool that safely deletes files and directories 
ignored by your project's .gitignore rules.

Features:
• Cleans files based on .gitignore patterns
• Safe dry-run mode by default
• Pattern exclusion to keep specific files
• Verbose and quiet modes
• Fast and reliable"""

assets = [
    ["target/release/clean-repo", "usr/bin/", "755"],
    ["man/clean-repo.1", "usr/share/man/man1/", "644"],
]